# rayflow

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MULTIPLE_RETURNS_DESIGN.md  RAYFLOW_SOURCE_OF_TRUTH.json  README.md  files.md  idea.md  pyproject.toml  rayflow_agents_system.md  rayflow_file_map.json  rayflow_issues.json  rayflow_scenarios.json  rayflow_system_prompt.md  rayflow_workflows.json  ui.md
.claude/: settings.json  settings.local.json
.claude/agents/: rayflow-auditor.md  rayflow-build-specialist.md  rayflow-ci-specialist.md  rayflow-cli-specialist.md  rayflow-docs-specialist.md  rayflow-editor-api-specialist.md  rayflow-engine-specialist.md  rayflow-events-specialist.md  rayflow-frontend-app-specialist.md  rayflow-frontend-build-specialist.md  rayflow-frontend-canvas-specialist.md  rayflow-frontend-panels-specialist.md  rayflow-frontend-state-specialist.md  rayflow-frontend-ui-kit-specialist.md  rayflow-github-runner.md  rayflow-hooks-infra-specialist.md  rayflow-issue-moderator.md  rayflow-issue-writer.md  rayflow-macro-frontend.md  rayflow-macro-interfaces.md  rayflow-macro-repo-quality.md  rayflow-macro-runtime-core.md  rayflow-main.md  rayflow-mcp-runner.md  rayflow-mcp-specialist.md  rayflow-nodes-specialist.md  rayflow-packaging-specialist.md  rayflow-pylib-inspector.md  rayflow-router.md  rayflow-schema-specialist.md  rayflow-server-specialist.md  rayflow-state-specialist.md  rayflow-tests-specialist.md  rayflow-web-researcher.md  rayflow_bash_runner.md
.claude/hooks/: _file_map.py  _sot_scope.py  _ty_check.py  dependents_reminder.py  file_map_context.py  sot_guard.py  (+7 more)
docs/: analisis-conceptual.md  api-server.md  architecture.md  claude_code_quality_pattern.md  claude_md_generation.md  cli.md  editor.md  frontend.md  issues_system.md  json-format.md  node-system.md  node-types.md  orchestrator-architecture.md  orchestrator-interfaces.md  orchestrator-plan.md  orchestrator.md  overview.md  propuesta-runcontext.md  rayflow.md  ui-events.md  variables.md
editor/: app.js  index.html
examples/: branch_demo.json  cast_demo.json  foreach_demo.json  run_control_nodes.py  run_showcase.py  run_suma.py  run_types.py  sequence_demo.json  showcase.json  suma.json
nodes/: example_add.py  example_divide.py  example_multiply.py
rayflow/: __init__.py  __main__.py  api.py  cli.py  registry.py  server.py  types.py  workspace.py
scripts/: check_sot_commit_message.py  draft_file_map_entries.py  find_orphaned_claims.py  generate_claude_md.py  generate_file_map.py  generate_macro_agents.py  generate_specialist_agents.py  run_sot_audit.py
tests/: __init__.py  entry_fixtures.py  helpers.py  test_basic.py  test_build.py  test_callflow.py  test_cli.py  test_custom_nodes.py  test_editor.py  test_events.py  test_executor.py  test_mcp.py  test_nodes.py  test_schema.py  test_server.py
variables/: inter.py
(+141 files in other folders)
