[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rayflow"
version = "1.0.0"
description = "Visual workflow orchestration on Ray"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ray>=2.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
rayflow = "rayflow.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["rayflow*"]

[tool.setuptools.package-data]
"rayflow.editor.static" = ["dist/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
